fixed CSS clipping when hovering

--- a/components/find-communities/css.module.scss
+++ b/components/find-communities/css.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1em 0;
+  padding: 2em 0;
   overflow-x: hidden;
   overflow-y: clip;
 
